Improved game loop
- Added two parameters to the GameSettings constructor: "frameRate" and "sleepThread".
- Removed the "charset" parameters from the "readText" and "writeText" methods in the GeneralUtils class.